--- a/app/src/main/res/layout/fragment_list_icon_text.xml
+++ b/app/src/main/res/layout/fragment_list_icon_text.xml
@@ -4,7 +4,9 @@
     tools:context="lennux.com.mx.videoplayer.fragments.ListIconTextFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ListView
+        android:id="@+id/listIconText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 </FrameLayout>
